--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -1,7 +1,7 @@
-NAME			=	phonebookl
+NAME			=	Phonebook
 
-SRC				= 	phonebook.cpp\
-					contact.cpp\
+SRC				= 	Phonebook.cpp\
+					Contact.cpp\
 					main.cpp
 
 INC				=	-I ./inc
