--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -1,21 +1,6 @@
-# **************************************************************************** #
-#                                                                              #
-#                                                         ::::::::             #
-#    Makefile                                           :+:    :+:             #
-#                                                      +:+                     #
-#    By: adoner <adoner@student.codam.nl>             +#+                      #
-#                                                    +#+                       #
-#    Created: 2022/02/01 13:16:02 by adoner        #+#    #+#                  #
-#    Updated: 2022/08/18 17:01:26 by adoner        ########   odam.nl          #
-#                                                                              #
-# **************************************************************************** #
-
 #color
 GREEN = \033[38;5;2m
-NORMAL = \033[38;5;255m
 RED = \033[38;5;1m
-BLUE = \033[38;5;4m
-YELLOW = \033[1;33m
 
 # Compiler settings
 GCC = g++
@@ -24,7 +9,6 @@ FLAGS   = -Wall -Wextra -Werror -std=c++98
 # Source, tests, header and object files
 SRC_FILES = megaphone.cpp
 
-OBJ_DIR = obj
 OBJ = $(SRC_FILES:%.c=$(OBJ_DIR)/%.o)
 
 
@@ -32,19 +16,12 @@ OBJ = $(SRC_FILES:%.c=$(OBJ_DIR)/%.o)
 NAME = megaphone
 
 # Build release
-all: $(OBJ_DIR) $(NAME)
+all: $(NAME)
 
-# Build normal
-$(OBJ_DIR):
-	@mkdir -p $@
 
 $(NAME): $(OBJ)
 	$(GCC) $(FLAGS) $^ -o $@
 	@echo "$(GREEN) Created megaphone executable.$(NORMAL)"
-
-$(OBJ): $(OBJ_DIR)/%.o : %.c $(HEADER_FILES)
-	@mkdir -p $(@D)
-	@$(GCC) $(FLAGS) -c $< -o $@
 
 clean:
 	@rm -rdf $(OBJ_DIR)
