--- a/cpp03/ex01/Makefile
+++ b/cpp03/ex01/Makefile
@@ -1,7 +1,8 @@
 NAME			=	ClasTrap
 
 SRC				= 	main.cpp\
-					ClapTrap.cpp
+					ClapTrap.cpp\
+					ScavTrap.cpp
 			
 OBJS			=	$(SRC:%.cpp=%.o)
 
