--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -3,7 +3,9 @@ NAME			=	Polymorphism
 SRC				= 	main.cpp\
 					Animal.cpp\
 					Cat.cpp\
-					Dog.cpp
+					Dog.cpp\
+					WrongAnimal.cpp\
+					WrongCat.cpp
 					
 OBJS			=	$(SRC:%.cpp=%.o)
 
