--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,6 +69,7 @@
         "__tree": "cpp",
         "fstream": "cpp",
         "map": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "fragtrap.hpp": "c"
     }
 }
