--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -8,7 +8,7 @@ INC				=	-I ./inc
 
 OBJS			=	$(SRC:%.cpp=%.o)
 
-CPP				=	g++
+CPP				=	c++
 CPP_FLAGS		= 	-Wall -Wextra -Werror -std=c++98 
 
 all:			$(NAME)
