cpp04 ex01 update

--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -4,13 +4,11 @@ SRC				= 	main.cpp\
 					Animal.cpp\
 					Cat.cpp\
 					Dog.cpp\
-					WrongAnimal.cpp\
-					WrongCat.cpp\
 					Brain.cpp
 					
 OBJS			=	$(SRC:%.cpp=%.o)
 
-CPP				=	g++
+CPP				=	c++
 CPP_FLAGS		= 	-Wall -Wextra -Werror -std=c++98 
 
 all:			$(NAME)
