--- a/cpp05/ex00/Makefile
+++ b/cpp05/ex00/Makefile
@@ -1,7 +1,11 @@
-NAME			=	Fixed
+NAME			=	Bureaucrat
 
 SRC				= 	main.cpp\
-					Fixed.cpp
+					Animal.cpp\
+					Cat.cpp\
+					Dog.cpp\
+					Brain.cpp
+					
 OBJS			=	$(SRC:%.cpp=%.o)
 
 CPP				=	c++
