--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -7,7 +7,7 @@ SRC				= 	main.cpp\
 			
 OBJS			=	$(SRC:%.cpp=%.o)
 
-CPP				=	g++
+CPP				=	c++
 CPP_FLAGS		= 	-Wall -Wextra -Werror -std=c++98 
 
 all:			$(NAME)
