--- a/cpp03/ex01/Makefile
+++ b/cpp03/ex01/Makefile
@@ -1,4 +1,4 @@
-NAME			=	ClasTrap
+NAME			=	scavTrap
 
 SRC				= 	main.cpp\
 					ClapTrap.cpp\
@@ -13,7 +13,9 @@ all:			$(NAME)
 
 $(NAME):		$(OBJS)
 				$(CPP) $(CPP_FLAGS) $(OBJS) -o $(NAME)
-				
+
+run: all
+	./scavTrap
 clean:
 	rm -f $(OBJS)
 fclean: clean
