--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -17,6 +17,8 @@ all:			$(NAME)
 $(NAME):		$(OBJS)
 				$(CPP) $(CPP_FLAGS) $(OBJS) -o $(NAME)
 				
+run:all
+	./Polymorphism
 clean:
 	rm -f $(OBJS)
 fclean: clean
