--- a/cpp06/ex02/Makefile
+++ b/cpp06/ex02/Makefile
@@ -1,13 +1,13 @@
-NAME			= converter
+NAME			= class
 
 CPP				= c++
 
 FLAGS			= -Wall -Wextra -Werror -I -std=c++98
 
 SRC				= 	main.cpp\
-					Converter.cpp
+					Class.cpp
 
-INC				= 	Converter.hpp
+INC				= 	Class.hpp
 
 OBJ_DIR			= obj
 OBJ				= $(addprefix $(OBJ_DIR)/, $(SRC:%.cpp=%.o))
@@ -22,11 +22,7 @@ $(NAME) : $(OBJ)
 	$(CPP) $(FLAGS) $^ -o $@
 
 run: all
-	 ./converter -1
-	 ./converter a
-	 ./converter -12.11
-	 ./converter 123f
-	 ./converter 0/0
+	./class
 
 clean : 
 	rm -rf $(OBJ_DIR)
